[Bug #157496958] fix lengthy banner image on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -592,7 +592,7 @@
       url(../img/hero2.png);
     background-position: center;
     background-size: cover;
-    padding-top: 30px;
+    padding-top: 20px;
     padding-bottom: 20px;
   }
   .hero .text p,
